<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <ImageView
        android:id="@+id/img_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:src="@drawable/ic_go_back"/>

    <EditText
        android:id="@+id/et_sign_up_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_sign_up_password"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.35"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_sign_up_account"
        android:hint="@string/input_account_name"/>
    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_name"
        app:layout_constraintBottom_toTopOf="@id/et_sign_up_repassword"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_sign_up_lock"
        android:hint="@string/input_password" />
    <EditText
        android:id="@+id/et_sign_up_repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_password"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up_confirm"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_sign_up_lock"
        android:hint="@string/input_password_again"/>
    <TextView
        android:id="@+id/tv_sign_up_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_repassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_text_title_reverse"
        android:background="@drawable/bg_login_btn"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/tv_had_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_back_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/is_have_account"/>

    <TextView
        android:id="@+id/tv_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_had_account"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="#0079FE"
        android:text="@string/go_back_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>