<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_login_view">

        <ImageView
            android:id="@+id/img_login_account"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/img_account_circle_default"/>

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:textColor="@color/color_text_comment"
            android:text="@string/account_name"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gp_account_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="img_third_qq,img_third_wechat,et_login_input"/>
        <EditText
            android:id="@+id/et_login_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:lines="1"
            android:gravity="center"
            android:hint="@string/login_name_hint"/>
        <ImageView
            android:id="@+id/img_third_qq"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_login_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/img_third_wechat"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:visibility="gone"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_third_party_qq" />
        <ImageView
            android:id="@+id/img_third_wechat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="@id/img_third_qq"
            app:layout_constraintLeft_toRightOf="@id/img_third_qq"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_third_party_wechat"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gp_password_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_forget,et_password_input"/>
        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_login_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/color_text_comment"
            android:text="@string/forget_password"/>
        <EditText
            android:id="@+id/et_password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:lines="1"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/input_password"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/cl_login"
        app:layout_constraintLeft_toLeftOf="@id/cl_login"
        app:layout_constraintRight_toRightOf="@id/cl_login"
        app:layout_constraintWidth_percent="0.7"
        android:background="@color/color_background2"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        android:elevation="7dp"
        app:layout_constraintTop_toBottomOf="@id/cl_login"
        app:layout_constraintBottom_toBottomOf="@id/cl_login"
        app:layout_constraintLeft_toLeftOf="@id/cl_login"
        app:layout_constraintRight_toRightOf="@id/cl_login"
        android:padding="6dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_text_title_reverse"
        android:text="@string/login"
        android:background="@drawable/bg_login_btn"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/color_text_title"
        android:shadowColor="#404040"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:textSize="18sp"
        android:text="@string/sign_up"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:elevation="5dp"
        app:pressedTranslationZ="3dp"
        app:layout_constraintTop_toTopOf="@id/tv_sign_up"
        app:layout_constraintBottom_toBottomOf="@id/tv_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        android:visibility="gone"
        android:src="@drawable/ic_login_previous"
        app:backgroundTint="@color/color_icon_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>